# morph-bulk

./: .gitignore  README.md  morph-bulk.shub  morphbulk.py  setup.py
example/: gene_descriptions.tsv  zosma.go.tsv
example/clusterings/click/: all.click.cl  female_flower.click.cln  male_flower.click.cl  root.click.cln  vegetative.click.cln
example/datasets/: all.count_table.txt  female_flower.count_table.txt  male_flower.count_table.txt  root.count_table.txt  vegetative.count_table.txt
morph-v1.0.6/: .hgignore  INSTALL  README.md  example_config.yaml  example_joblist.yaml
morph-v1.0.6/cmake_modules/: FindYAMLCpp.cmake
morph-v1.0.6/src/: CMakeLists.txt
morph-v1.0.6/src/morphc/: Application.cpp  Application.h  Cache.h  Cluster.cpp  Cluster.h  Clustering.cpp  Clustering.h  ErrorType.h  GOIResult.h  GeneDescriptions.cpp  GeneDescriptions.h  GeneExpression.cpp  GeneExpression.h  GeneMapping.cpp  GeneMapping.h  GenesOfInterest.cpp  GenesOfInterest.h  Ranking.cpp  Ranking.h  Species.cpp  Species.h  StringMapping.cpp  StringMapping.h  TabGrammarRules.h  main.cpp  ublas.h  util.cpp  util.h
morph_bulk/: TMMnormalization.R  add_species.py  morph_bulk_post.py  morph_bulk_to_rdf.py  morph_chunked.py  pre_process.py  random_baits.py
